@@ -1,3 +1,7 @@
+2019-11-04  Jason Merrill  <jason@redhat.com>
+
+	* typeck.c (check_return_expr): Avoid redundant error.
+
 2019-11-02  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	* typeck.c (composite_pointer_type): Add a const op_location_t&
